// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/TextFilter with filterText 1`] = `
<div
  class="css-79elbk eg9vth70"
>
  <input
    autocomplete="off"
    class="css-1yhj4t5 eg9vth71"
    name="filter-text"
    placeholder="Filter"
    spellcheck="false"
    type="text"
    value="Filter Text"
  />
  <button
    class="clear css-thhrwj eg9vth72"
  >
    ×
  </button>
</div>
`;

exports[`Storyshots UI|stories/TextFilter without filterText 1`] = `
<div
  class="css-79elbk eg9vth70"
>
  <input
    autocomplete="off"
    class="css-1yhj4t5 eg9vth71"
    name="filter-text"
    placeholder="Filter"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;
